# assignment-2

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
assignment2/: Node.hpp  Node.test.cpp  Operator.cpp  Operator.hpp  RpnCalculator.cpp  RpnCalculator.hpp  RpnCalculator.test.cpp  Stack.cpp  Stack.hpp  Stack.test.cpp
cmake/: ClangFormat.cmake  ClangTidy.cmake  FindDoctest.cmake  Valgrind.cmake
scripts/: add_kiteware_repo.sh  zip_assignment.sh
